User Security - fix alignment demo of multiple special radio button list

--- a/packages/ui/src/5-elements/form/_form.scss
+++ b/packages/ui/src/5-elements/form/_form.scss
@@ -5,7 +5,7 @@
     &.is-multiple { grid-template-columns: repeat(auto-fit, minmax(pxToRem(180), 1fr)); }
   }
   &-item {
-    &.is-multiple { display:flex; gap:pxToRem(16); }
+    &.is-multiple { display:flex; align-items:center; gap:pxToRem(16); }
     &-part {  }
   }
 }
